# PathwayAnnotator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  yeast_proteins_to_pathway.csv
data/: create_pathway_tree.py  fetch_go_annotations.py  go_pathway_assignments.csv  hierarchy_to_go.json  human_mitocarta_pathways.csv  pathway_tree.txt  yeast_all_go_annotations.json  yeast_mitocarta_pathways.csv
go_assignment/: assign_proteins_to_pathway.py  clean_pathway_assignments.csv  clean_pathway_assignments.py  fetch_go_annotations.py
go_assignment/data/: hierarchy_to_go.json  yeast_all_go_descriptions.json  yeast_mitocarta.csv
unknome/: find_unknown_proteins.py
unknome/data/: unknome_filtered_yeast.tsv  unknown_proteins_cutoff_1.0.json
